test/types/tuple/ferguson/const-checking-loop-error.good
error: const-checking-loop-error.chpl:3 modifying const value
